# ml_algorithms

./: .gitignore  CMakeLists.txt  DecisionTree.cpp  DecisionTree.h  KMeans.cpp  KMeans.h  KNN.cpp  KNN.h  LinearRegression.cpp  LinearRegression.h  LogisticRegression.cpp  LogisticRegression.h  README.md  binding.cpp  bindings.cpp  first.cpp  first.sln  first.vcxproj  gradientBoosting.cpp  gradientBoosting.h  load_dataset.cpp  main.cpp
Python/: __init__.py  my_project.cp312-win_amd64.pyd  setup.py
bindings/: bindings.cpp
include/: DecisionTree.h  KNN.h  NaiveBayes.h  gradientBoosting.h
src/: DecisionTree.cpp  KNN.cpp  NaiveBayes.cpp  gradientBoosting.cpp
